@@ -3,6 +3,11 @@ project(avogadro) # the name of your project
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
 
 cmake_minimum_required(VERSION 2.4.5)
+
+if(COMMAND cmake_policy)
+  cmake_policy(SET CMP0003 NEW)
+endif(COMMAND cmake_policy)
+
 include (CheckCXXCompilerFlag)
 include (MacroEnsureVersion)
 ###########################################################
