@@ -1,3 +1,7 @@
+2008-05-16  Marcus D. Hanwell  <marcus@cryos.org>
+
+	* CMakeLists.txt: Set the CMake policy for CMake 2.6.
+
 2008-05-15  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* avogadro/mainwindow.h, avogadro/mainwindow.cpp: Changed engine
